Changes by Jacob Barkdull 2014-04-10
-------------------------------------------------------------------------------
Added memory usage comment to JavaScript and HTML output.


Changes by Jacob Barkdull 2014-04-07
-------------------------------------------------------------------------------
Fixed plurals in comment count for replies.


Changes by Jacob Barkdull 2014-04-05
-------------------------------------------------------------------------------
Submit buttons now disable on submission, enable again after 20 seconds.
Unified "hashover_noemail" and "hashover_noemailreply".
Removed "<br>" tags in favor of CSS.
Removed inline style.


Changes by Jacob Barkdull 2014-04-01
-------------------------------------------------------------------------------
Added a new theme draft by Luka Kaspar


Changes by Jacob Barkdull 2014-03-29
-------------------------------------------------------------------------------
Removed <table> element in favor of CSS column design.
Many CSS changes to accommodate removal of <table> element.
Cleaned up JavaScript for easier readability.


Changes by Jacob Barkdull 2014-03-28
-------------------------------------------------------------------------------
"Like" links now change to "Liked" when clicked.
Added language locales for like, edit, and reply links.
Minor language locale improvement.


Changes by Jacob Barkdull 2014-03-27
-------------------------------------------------------------------------------
When "$icons" variable is set to "no", an avatar icon no longer shows in reply 
and edit forms. In the primary form a comment number is displayed instead.

Many CSS changes to facilitate theming, like comment count and page title.
Many JavaScript changes to accommodate CSS changes.


Changes by Jacob Barkdull 2014-03-25
-------------------------------------------------------------------------------
Official mark of version 1.0!

All necessary files (source code and images) are now available via:
