@@ -44,6 +44,7 @@
 			'edit_cmt'	=> 'Edit Comment',
 			'save_edit'	=> 'Save Edit',
 			'no_email_warn'	=> 'You will not receive notification of replies to your comment without supplying an e-mail.',
+			'invalid_email'	=> 'The e-mail address you entered is invalid.',
 			'delete_cmt'	=> 'Are you sure you want to delete this comment?',
 			'post_cmt'	=> 'Post a Comment',
 			'popular_cmts'	=> 'Most Popular',
@@ -95,6 +96,7 @@
 			'edit_cmt'	=> 'Editar Comentario',
 			'save_edit'	=> 'Guardar Editar',
 			'no_email_warn'	=> 'Usted no recibirá notificación de las respuestas a su comentario sin de suministrar un e-mail.',
+			'invalid_email'	=> 'La dirección de correo electrónico que ha introducido no es válido.',
 			'delete_cmt'	=> '¿Está seguro que desea eliminar este comentario?',
 			'post_cmt'	=> 'Publicar un Comentario',
 			'popular_cmts'	=> 'La Más Populares',
@@ -146,6 +148,7 @@
 			'edit_cmt'	=> 'コメントを編集',
 			'save_edit'	=> '保存編集',
 			'no_email_warn'	=> 'あなたは、電子メールをずにあなたのコメントへの返信の通知を受け取ることができません。',
+			'invalid_email'	=> '入力したザeメールアドレスが無効。',
 			'delete_cmt'	=> 'あなたはこのコメントを削除してもよろしいですか？',
 			'post_cmt'	=> 'コメントの投稿',
 			'popular_cmts'	=> '人気',
