@@ -133,14 +133,18 @@ Copyright (C) 2014 Jacob Barkdull
 }
 
 #hashover .hashover-submit:hover {
-	background-color: #F0F0F0 ! important;
+	background-color: rgba(196, 196, 255, 0.10) ! important;
 	cursor: pointer;
 }
 
 #hashover .hashover-submit:focus,
 #hashover .hashover-submit[disabled] {
-	background-color: #E8E8E8 ! important;
+	background-color: rgba(196, 196, 255, 0.25) ! important;
 	border-color: #000000 ! important;
+}
+
+#hashover .hashover-submit[disabled] {
+	background-color: #E8E8E8 ! important;
 }
 
 #hashover textarea:hover, 
@@ -250,7 +254,7 @@ Copyright (C) 2014 Jacob Barkdull
 }
 
 #hashover .hashover-comment .hashover-footer .hashover-buttons a:hover {
-	background-color: rgba(128, 128, 128, 0.2);
+	background-color: rgba(196, 196, 255, 0.35);
 }
 
 #hashover .hashover-comment .hashover-footer .hashover-buttons a.hashover-like:active {
@@ -260,7 +264,7 @@ Copyright (C) 2014 Jacob Barkdull
 
 #hashover .hashover-comment .hashover-footer .hashover-buttons a.hashover-liked:active {
 	background-image: url('/hashover/images/like.png');
-	background-color: rgba(128, 128, 128, 0.1);
+	background-color: rgba(196, 196, 255, 0.35);
 }
 
 #hashover a.hashover-like {
@@ -382,17 +386,20 @@ Copyright (C) 2014 Jacob Barkdull
 	margin: 0px;
 	border: none;
 	margin-top: 0px ! important;
-	background-color: #F0F0F0;
+	background-color: rgba(196, 196, 255, 0.15);
 }
 
 #hashover .hashover-comment .hashover-submit:hover {
-	background-color: #E9E9E9 ! important;
+	background-color: rgba(196, 196, 255, 0.25) ! important;
 	cursor: pointer;
 }
 
-#hashover .hashover-comment .hashover-submit:focus,
+#hashover .hashover-comment .hashover-submit:focus {
+	background-color: rgba(196, 196, 255, 0.35) ! important;
+}
+
 #hashover .hashover-comment .hashover-submit[disabled] {
-	background-color: #E5E5E5 ! important;
+	background-color: #E8E8E8 ! important;
 }
 
 #hashover .hashover-comment input[type="button"],
@@ -426,14 +433,30 @@ Copyright (C) 2014 Jacob Barkdull
 }
 
 #hashover .hashover-comment .hashover-options {
+	margin-top: -1px;
+	background-color: rgba(196, 196, 255, 0.15);
+	transition: max-height 0.15s linear 0ms;
+	-moz-transition: max-height 0.15s linear 0ms;
+	-webkit-transition: max-height 0.15s linear 0ms;
+	-o-transition: max-height 0.15s linear 0ms;
+}
+
+#hashover .hashover-comment .hashover-options.open,
+#hashover .hashover-comment .hashover-message.open {
+	max-height: 60px;
+}
+
+#hashover .hashover-comment .hashover-options.open {
+	padding-bottom: 1px;
+}
+
+#hashover .hashover-comment .hashover-options,
+#hashover .hashover-comment .hashover-message {
 	clear: both;
+	max-height: 0px;
 	width: 100%;
 	overflow: hidden;
-	background-color: #F0F0F0;
-	transition: all 0.15s linear 0ms;
-	-moz-transition: all 0.15s linear 0ms;
-	-webkit-transition: all 0.15s linear 0ms;
-	-o-transition: all 0.15s linear 0ms;
+	border-top: 1px solid #C1C1C1;
 }
 
 #hashover .hashover-comment .hashover-inputs input {
@@ -441,7 +464,7 @@ Copyright (C) 2014 Jacob Barkdull
 }
 
 #hashover .hashover-comment textarea {
-	margin: 0px ! important;
+	margin: -1px 0px 0px 0px ! important;
 	border-left: none ! important;
 	border-right: none ! important;
 	border-color: #C1C1C1;
@@ -602,7 +625,7 @@ Copyright (C) 2014 Jacob Barkdull
 	width: auto;
 	clear: both;
 	overflow: hidden;
-	background-color: rgba(128, 128, 128, 0.1);
+	background-color: rgba(196, 196, 255, 0.15);
 }
 
 #hashover .hashover-comment.reply .hashover-footer {
@@ -653,4 +676,19 @@ Copyright (C) 2014 Jacob Barkdull
 	text-align: center;
 	background-color: rgba(210, 210, 255, 0.5);
 	border: 1px solid #AAAAFF;
+}
+
+#hashover .hashover-comment .hashover-message {
+	display: block;
+	padding: 0px 10px;
+	text-align: center;
+	background-color: rgba(210, 210, 255, 0.5);
+	transition: all 0.25s linear 0ms;
+	-moz-transition: all 0.25s linear 0ms;
+	-webkit-transition: all 0.25s linear 0ms;
+	-o-transition: all 0.25s linear 0ms;
+}
+
+#hashover .hashover-comment .hashover-message.open {
+	padding: 10px 8px 11px 8px;
 }
